--- a/springboot-demo-server/src/main/resources/application.yml
+++ b/springboot-demo-server/src/main/resources/application.yml
@@ -25,3 +25,8 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: true
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
