--- a/springboot-demo-server/src/main/resources/application.yml
+++ b/springboot-demo-server/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         dialect:
           org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
